Change location to map and include link to info

--- a/polling_stations/apps/file_uploads/templates/file_uploads/council_detail.html
+++ b/polling_stations/apps/file_uploads/templates/file_uploads/council_detail.html
@@ -157,7 +157,7 @@
                     <tr>
                         <th>Station Address</th>
                         <th>Station Postcode</th>
-                        <th>Has Location</th>
+                        <th>Map Showing<br><small style="font-weight: normal;"><a href="https://democracyclub.org.uk/projects/polling-stations/upload/#Mapping">More Info</a></small></th>
                         <th>Examples</th>
                     </tr>
                     {% for station in STATIONS %}
