Show station accessibility on the frontend

--- a/polling_stations/templates/fragments/you_dont_need_poll_card.html
+++ b/polling_stations/templates/fragments/you_dont_need_poll_card.html
@@ -3,7 +3,7 @@
     <div class="ds-card">
         <div class="ds-card-body">
             <h3>
-                <span aria-hidden="true">🗳</span>️
+                <span aria-hidden="true">🪪</span>️
                 {% trans "You will need to take photo ID to vote at a polling station in this election" %}
             </h3>
             <p>
@@ -28,7 +28,7 @@
     <div class="ds-card">
         <div class="ds-card-body">
             <h3>
-                <span aria-hidden="true">🗳</span>️
+                <span aria-hidden="true">🪪</span>️
                 {% trans "You don't need your poll card to vote" %}
             </h3>
             <p>
