--- a/polling_stations/templates/fragments/polling_station_known.html
+++ b/polling_stations/templates/fragments/polling_station_known.html
@@ -53,31 +53,6 @@
             {% endif %}
         </address>
 
-        {% if directions.time %}
-            <div id="directions">
-                {% if directions.mode == "walk" %}
-                    <p>
-                        {% blocktrans trimmed with distance_in_miles=directions.distance_in_miles|floatformat:"1" time_in_minutes=directions.time_in_minutes %}
-                            It's about {{ distance_in_miles }} miles away or a {{ time_in_minutes }} minute walk from {{ postcode }}.
-                        {% endblocktrans %}
-                    </p>
-                {% elif directions.mode == "drive" %}
-                    <p>
-                        {% blocktrans trimmed with distance_in_miles=directions.distance_in_miles|floatformat:"1" time_in_minutes=directions.time_in_minutes %}
-                            It's about {{ distance_in_miles }} miles away or a {{ time_in_minutes }} minute drive from {{ postcode }}.
-                        {% endblocktrans %}
-                    </p>
-                {% endif %}
-
-                <p>
-                    {% blocktrans trimmed with google_maps_url=directions.google_maps_url cyclestreets_url=directions.cyclestreets_url %}
-                        Get <a href="{{ google_maps_url }}" target="_top">walking/driving directions from Google</a> or <a href="{{ cyclestreets_url }}" target="_top">cycling directions from CycleStreets</a>.
-                    {% endblocktrans %}
-                </p>
-            </div>
-        {% endif %}
-
-
         <p><strong>
             {% blocktrans %}Polling stations are open from 7am to 10pm{% endblocktrans %}{% if NEXT_CHARISMATIC_ELECTION_DATE %}{% blocktrans %} on {{ NEXT_CHARISMATIC_ELECTION_DATE }}{% endblocktrans %}{% endif %}.
         </strong></p>
@@ -91,6 +66,20 @@
     {% if station.location %}
         <div id="area_map" class="ds-card-image"></div>
     {% endif %}
+</div>
+<div class="ds-card" id="station-info">
+    <div class="ds-card-body">
+        {% if directions.time or  station.accessibility_information.getting_to_the_station %}
+            {% include "fragments/getting_to_the_station.html" %}
+        {% endif %}
+        <h3>
+            <span aria-hidden="true">🗳</span>️
+            {% trans "At the polling station" %}
+        </h3>
+        {%  if has_at_station_info  %}
+            {% include "fragments/at_the_station.html" %}
+        {% endif %}
+    </div>
 </div>
 
 {% if show_polls_open_card and advance_voting_station and not advance_voting_station.open_in_future %}
