Add Welsh text fields to accessibility information model

--- a/polling_stations/templates/fragments/at_the_station.html
+++ b/polling_stations/templates/fragments/at_the_station.html
@@ -50,7 +50,7 @@
             {{ council.name }} have added a note about this station:
         </p>
         <p>
-            {{ station.accessibility_information.at_the_station }}
+            {{ station.accessibility_information.at_the_station_text }}
         </p>
     {% endif %}
 </div>
