--- a/polling_stations/templates/fragments/getting_to_the_station.html
+++ b/polling_stations/templates/fragments/getting_to_the_station.html
@@ -11,6 +11,6 @@
         {{ council.name }} have added a note about getting to this station:
     </p>
     <p>
-        {{ station.accessibility_information.getting_to_the_station }}
+        {{ station.accessibility_information.getting_to_the_station_text }}
     </p>
 {% endif %}
