--- a/polling_stations/templates/fragments/at_the_station.html
+++ b/polling_stations/templates/fragments/at_the_station.html
@@ -1,56 +1,51 @@
 {% load i18n %}
 
-<div>
-    <p>This polling station:</p>
-    <ul style="list-style: none;">
-        {% if station.accessibility_information.is_temporary %}
-            <li>
-                <span aria-hidden="true">🚌</span>️
-                Is a temporary structure.
-            </li>
-        {% endif %}
-
-        {% if station.accessibility_information.nearby_parking %}
-            <li>
-                <span aria-hidden="true">🅿️</span>️
-                Has nearby parking.
-            </li>
-        {% endif %}
-
-        {%  if station.accessibility_information.disabled_parking %}
-            <li>
-                <span aria-hidden="true">⛍️</span>️
-                Has disabled parking.
-            </li>
-        {% endif %}
-
-        {% if station.accessibility_information.level_access_text %}
-            <li>
-                <span aria-hidden="true">♿</span>️
-                {{  station.accessibility_information.level_access_text }}
-            </li>
-        {% endif %}
-
-        {% if station.accessibility_information.hearing_loop %}
-            <li>
-                <span aria-hidden="true">🦻</span>️
-                Has a hearing loop installed.
-            </li>
-        {% endif %}
-
-        {% if station.accessibility_information.public_toilets %}
-            <li>
-                <span aria-hidden="true">🚻</span>️
-                Has publicly accessible toilets.
-            </li>
-        {% endif %}
-    </ul>
-    {% if station.accessibility_information.at_the_station %}
-        <p>
-            {{ council.name }} have added a note about this station:
-        </p>
-        <p>
-            {{ station.accessibility_information.at_the_station_text }}
-        </p>
+<h3>
+    <span aria-hidden="true">🗳</span>️
+    {% trans "At the polling station" %}
+</h3>
+<p>This polling station has:</p>
+<ul style="list-style: none;">
+    {% if station.accessibility_information.nearby_parking %}
+        <li>
+            <span aria-hidden="true">🅿️</span>️
+            {% trans "nearby parking" %}
+        </li>
     {% endif %}
-</div>
+
+    {%  if station.accessibility_information.disabled_parking %}
+        <li>
+            <span aria-hidden="true">⛍️</span>️
+            {% trans "disabled parking" %}
+        </li>
+    {% endif %}
+
+    {% if station.accessibility_information.level_access_text %}
+        <li>
+            <span aria-hidden="true">♿</span>️
+            {{ station.accessibility_information.level_access_text }}
+        </li>
+    {% endif %}
+
+    {% if station.accessibility_information.hearing_loop %}
+        <li>
+            <span aria-hidden="true">🦻</span>️
+            {% trans "a hearing loop installed" %}
+        </li>
+    {% endif %}
+
+    {% if station.accessibility_information.public_toilets %}
+        <li>
+            <span aria-hidden="true">🚻</span>️
+            {% trans "publicly accessible toilets" %}
+        </li>
+    {% endif %}
+</ul>
+{% if station.accessibility_information.at_the_station %}
+    <p>
+        <strong>{% trans "The electoral services team have added a note about this station:" %}</strong>
+    </p>
+    <blockquote>
+        {{ station.accessibility_information.at_the_station_text }}
+    </blockquote>
+{% endif %}
