--- a/polling_stations/templates/fragments/polling_station_known.html
+++ b/polling_stations/templates/fragments/polling_station_known.html
@@ -67,16 +67,18 @@
         <div id="area_map" class="ds-card-image"></div>
     {% endif %}
 </div>
-<div class="ds-card" id="station-info">
-    <div class="ds-card-body">
-        {% if directions.time or  station.accessibility_information.getting_to_the_station or station_is_temporary %}
-            {% include "fragments/getting_to_the_station.html" %}
-        {% endif %}
-        {%  if has_at_station_info  %}
-            {% include "fragments/at_the_station.html" %}
-        {% endif %}
+{% if directions.time or  station.accessibility_information.getting_to_the_station or station_is_temporary or has_at_station_info %}
+    <div class="ds-card" id="station-info">
+        <div class="ds-card-body">
+            {% if directions.time or  station.accessibility_information.getting_to_the_station or station_is_temporary %}
+                {% include "fragments/getting_to_the_station.html" %}
+            {% endif %}
+            {%  if has_at_station_info  %}
+                {% include "fragments/at_the_station.html" %}
+            {% endif %}
+        </div>
     </div>
-</div>
+{% endif %}
 
 {% if show_polls_open_card and advance_voting_station and not advance_voting_station.open_in_future %}
     <div class="ds-card">
