--- a/polling_stations/apps/file_uploads/templates/file_uploads/upload.html
+++ b/polling_stations/apps/file_uploads/templates/file_uploads/upload.html
@@ -30,8 +30,11 @@
     <h2>Upload EMS export</h2>
     <p>
         Use the buttons below to select and upload a polling station export file from your computer.
-        Instructions on how to create the export can be found <a href="https://democracyclub.org.uk/projects/polling-stations/upload/">here</a>.
+        Instructions on how to create the export can be found <a href="https://democracyclub.org.uk/projects/polling-stations/upload/">here</a>. 
     </p>
+    <p>
+        <strong>4 July General Election:</strong> Please provide data for all stations in your council area in one file - do not split the file by constituency. If this is not possible, please email the separate files to pollingstations@democracyclub.org.uk. Please do not edit the file produced by your EMS.
+   </p>
 
     <form id="file_upload_form" method="POST">
         {% if SHOW_DATE_PICKER %}
