--- a/polling_stations/apps/file_uploads/templates/file_uploads/upload.html
+++ b/polling_stations/apps/file_uploads/templates/file_uploads/upload.html
@@ -33,8 +33,11 @@
         Instructions on how to create the export can be found <a href="https://democracyclub.org.uk/projects/polling-stations/upload/">here</a>. 
     </p>
     <p>
-        <strong>4 July General Election:</strong> Please provide data for all stations in your council area in one file - do not split the file by constituency. If this is not possible, please email the separate files to pollingstations@democracyclub.org.uk. Please do not edit the file produced by your EMS.
-   </p>
+        <strong>4 July General Election:</strong> Where possible, please provide data for all stations in your council area in one file - do not manually split the file by constituency. If this is not possible, please email the separate files to pollingstations@democracyclub.org.uk. Please do not edit the file produced by your EMS. 
+     </p>    
+    <p> 
+    In the event that some of the stations in your council area are managed by neighbouring councils for the GE, please ensure that they are aware that they need to provide this data to us.
+  </p>
 
     <form id="file_upload_form" method="POST">
         {% if SHOW_DATE_PICKER %}
