--- a/polling_stations/templates/home.html
+++ b/polling_stations/templates/home.html
@@ -56,7 +56,7 @@
                             </p>
                         {% endif %}
                         {% if show_gb_id_messaging %}
-                            <p>{% trans "Photographic identification will be required to vote in English local elections, and parliamentary elections across the UK, on and after 4 May 2023." %}</p>
+                            <p>{% trans "Photographic identification will be required to vote in the 4 July UK general election." %}</p>
                             <p><a href="https://www.electoralcommission.org.uk/i-am-a/voter/voter-id" aria-label="{% trans 'Learn more about photographic identification for voters on the website of the Electoral Commission.' %}">{% trans "Learn more on the website of the Electoral Commission." %}</a></p>
                         {% endif %}
                         <p>{% trans "You must vote at your assigned polling station." %}</p>
