Add goatcounter to homepage

--- a/polling_stations/templates/home.html
+++ b/polling_stations/templates/home.html
@@ -70,3 +70,7 @@
         </div>
     {% endblock page_content %}
 {% endblock content %}
+{% block in_page_javascript %}
+    <script data-goatcounter="https://wheredoivote.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+{% endblock in_page_javascript %}
