Hide register to vote card

--- a/polling_stations/templates/multiple_councils.html
+++ b/polling_stations/templates/multiple_councils.html
@@ -27,5 +27,5 @@
     </div>
 
     {% include "fragments/you_dont_need_poll_card.html" %}
-    {% include "fragments/register_to_vote.html" %}
+    {#    {% include "fragments/register_to_vote.html" %}#}
 {% endblock content %}
