--- a/polling_stations/templates/postcode_view.html
+++ b/polling_stations/templates/postcode_view.html
@@ -39,7 +39,7 @@
 
     {% endif %}
 
-    {% include "fragments/register_to_vote.html" %}
+    {#    {% include "fragments/register_to_vote.html" %}#}
     {% if has_election %}
         {% include "fragments/you_dont_need_poll_card.html" %}
         {% include "fragments/info_on_your_candidates.html" %}
