--- a/polling_stations/templates/home.html
+++ b/polling_stations/templates/home.html
@@ -33,7 +33,7 @@
                             <span aria-hidden="true">ℹ️</span>
                             {% trans "Photographic identification" %}
                         </h3>
-                        <p>{% trans "Photographic identification will be required to vote at a polling station in the 4 July UK general election." %}</p>
+                        <p>{% trans "Photographic identification is required to vote in English local elections, and UK parliamentary elections, since 4 May 2023" %}</p>
                         <p><a href="https://www.electoralcommission.org.uk/i-am-a/voter/voter-id" aria-label="{% trans 'Learn more about photographic identification for voters on the website of the Electoral Commission.' %}">{% trans "Learn more on the website of the Electoral Commission." %}</a></p>
 
                         <p>{% trans "You can apply for a free 'Voter Authority Certificate' if you do not already possess a valid ID." %}</p>
@@ -56,7 +56,7 @@
                             </p>
                         {% endif %}
                         {% if show_gb_id_messaging %}
-                            <p>{% trans "Photographic identification will be required to vote in the 4 July UK general election." %}</p>
+                            <p>{% trans "Photographic identification is required to vote in English local elections, and UK parliamentary elections, since 4 May 2023." %}</p>
                             <p><a href="https://www.electoralcommission.org.uk/i-am-a/voter/voter-id" aria-label="{% trans 'Learn more about photographic identification for voters on the website of the Electoral Commission.' %}">{% trans "Learn more on the website of the Electoral Commission." %}</a></p>
                         {% endif %}
                         <p>{% trans "You must vote at your assigned polling station." %}</p>
