--- a/polling_stations/templates/fragments/polling_station_known.html
+++ b/polling_stations/templates/fragments/polling_station_known.html
@@ -55,12 +55,16 @@
 
         <p><strong>
             {% if has_city_of_london_ballots %}
-                {% blocktrans %}Polling stations are open from 8am to 8pm{% endblocktrans %}{% if not NEXT_CHARISMATIC_ELECTION_DATE %}.{% endif %}
+                {% blocktrans %}Polling stations are open from 8am to 8pm for City of London local elections{% endblocktrans %}{% if not NEXT_CHARISMATIC_ELECTION_DATE %}.{% endif %}
             {% else %}
                 {% blocktrans %}Polling stations are open from 7am to 10pm{% endblocktrans %}{% if not NEXT_CHARISMATIC_ELECTION_DATE %}.{% endif %}
             {% endif %}
             {% if NEXT_CHARISMATIC_ELECTION_DATE %}{% blocktrans %} on {{ NEXT_CHARISMATIC_ELECTION_DATE }}{% endblocktrans %}.{% endif %}
-        </strong></p>
+        </strong>
+            {% if has_city_of_london_ballots %}
+                For elections to other organisations (e.g: GLA or Parliament) polling stations will be open from 7am to 10pm.
+            {% endif %}
+        </p>
         {% comment %} {% if territory != 'NI' %}
             <p>
                 {% blocktrans %}If you have a postal vote, you can hand it in at this polling station on election day up to 10pm{% endblocktrans %}
