use correct map class for NI out of cycle

--- a/polling_stations/templates/fragments/ni_out_of_cycle_station.html
+++ b/polling_stations/templates/fragments/ni_out_of_cycle_station.html
@@ -35,5 +35,5 @@
     </address>
 </p>
 {% if show_map %}
-    <div id="area_map" class="ds-card-image"></div>
+    <div id="area_map" class="ds-map-leaflet"></div>
 {% endif %}
