fix error fragment to only show form on postcode view

--- a/polling_stations/templates/home.html
+++ b/polling_stations/templates/home.html
@@ -12,7 +12,7 @@
             <div class="ds-card">
                 <div class="ds-card-body ds-text-centered">
                     {% if form.errors %}
-                        {% include "fragments/errors.html" with postcode=postcode %}
+                        {% include "fragments/errors.html" %}
                     {% endif %}
 
                     {% if not is_whitelabel %}
