--- a/polling_stations/templates/fragments/errors.html
+++ b/polling_stations/templates/fragments/errors.html
@@ -4,9 +4,11 @@
 <div class="ds-text-centered">
     <h2>{% blocktrans %}Sorry, we can't find {{ postcode }}{% endblocktrans %}</h2>
     <span>{% trans "We don't hold information for this postcode, or it is an invalid postcode." %}</span>
-    <form method="post" action="{% url 'home' %}" class="form form-inline">
-        {% csrf_token %}
-        {{ postcode_form|dc_form }}
-        <button type="submit" class="ds-button-blue" id="submit-postcode">{% trans "Find your Polling Station" %}</button>
-    </form>
+    {% if show_form_on_error %}
+        <form method="post" action="{% url 'home' %}" class="form form-inline">
+            {% csrf_token %}
+            {{ postcode_form|dc_form }}
+            <button type="submit" class="ds-button-blue" id="submit-postcode">{% trans "Find your Polling Station" %}</button>
+        </form>
+    {% endif %}
 </div>
