--- a/polling_stations/templates/fragments/postcode_form.html
+++ b/polling_stations/templates/fragments/postcode_form.html
@@ -12,7 +12,7 @@
       <h1>{% trans "Find your polling station" %}</h1>
     {% endif %}
 
-    <form id="find-polling-station-form" method="post" action="{% url 'home' %}" class="form form-inline">
+    <form id="find-polling-station-form" method="post" action="{{ submit_url }}" class="form form-inline">
       {% csrf_token %}
       {{ form|dc_form }}
       <button type="submit" class="ds-button-blue" id="submit-postcode">{% trans "Find your Polling Station" %}</button>
